# r2client

./: Cargo.toml  README.md  todo.md
aws_sigv4/: Cargo.toml  README.md  examples.md
aws_sigv4/src/: lib.rs
r2cli/: Cargo.toml  README.md  unit-test.txt
r2cli/.github/: copilot-instructions.md
r2cli/src/: main.rs
r2client/: Cargo.toml  todo.md
r2client/src/: _async.rs  error.rs  lib.rs
r2client/src/_async/: r2bucket.rs  r2client.rs
r2client/src/sync/: r2bucket.rs  r2client.rs
r2python/: Cargo.toml
src/: aws_signing.rs  error.rs  lib.rs  mimetypes.rs
src/_async/: r2bucket.rs  r2client.rs
src/sync/: r2bucket.rs  r2client.rs
tests/: r2_tests.rs
