[package]
name = "r2client"
version = "0.1.0"
edition = "2024"

[lib]

[dependencies]
sha2 = "0.10.9"
bytes = "1.10.1"
reqwest = { version = "0.12.19", features = ["blocking"] }
chrono = "0.4.41"
hex = "0.4.3"
hmac = "0.12.1"
xmltree = "0.11.0"
thiserror = "2"
async-trait = "0.1.89"
async-std = { version = "1.0", optional = true }
tokio = { version = "1.0", features = ["rt-multi-thread"], optional = true }
futures-executor = { version = "0.3", optional = true }
urlencoding = "2.1.3"
http = "1.3.1"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
dotenv = "0.15"

[features]
async = ["tokio"]
default = ["async"]
sync = ["tokio/rt-multi-thread", "futures-executor"]
async-std-runtime = ["async-std"]
