[package]
name = "r2client"
version = "0.2.0"
edition = "2024"

[lib]

[dependencies]
reqwest = "0.12.19"
xmltree = "0.11.0"
thiserror = "2"
http = "1.3.1"
aws_sigv4 = { path = "../aws_sigv4/" }
log = "0.4.28"

[dev-dependencies]
tokio = { version = "1", features = ["full", "macros", "rt-multi-thread"] }
dotenv = "0.15"

[features]
async = []
default = ["async"]
sync = ["reqwest/blocking"]
